# spmv_example

./: CMakeLists.txt  README.md
include/: CSR.hpp  GaspCsr.hpp  Semirings.cuh  common.h  gasp.h  gasp_spgemm.cuh  gasp_spmv.cuh  spmv.cuh  utils.cuh
matrices/: n16.mtx
tests/: spgemm.cu  spmv.cu  test_common.h
